[package]
name = "s-porter"
version = "0.1.0"
edition = "2024"

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"

[dependencies]
aes-gcm = "0.10"
anyhow = "1"
argon2 = "0.5"
base64 = "0.22"
chrono = "0.4"
chrono-tz = "0.10"
directories = "6"
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }
lsp-types = "0.97"
md5 = "0.7"
notify-rust = "4"
quick-xml = "0.30"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
